# Data-Collection

./: .gitignore  CMakeLists.txt  README.md
script/: build.bat  build.sh
server/: README.md
server/config/: config.json
server/data/: sensor_data.db
server/script/: server.sh
server/src/: database.py  main.py  mqtt_handler.py
source/: CMakeLists.txt
source/common/: DataTransfer.h  MQTTTransfer.cpp  MQTTTransfer.h  SensorStruct.h
source/sensors/include/: Sensor.h
source/sensors/src/egg/: egg.h
source/sensors/src/eye/: eye.h
source/sensors/src/wristband/: wristband.h
source/testCase/: test  test.cpp  testAll.cpp  testEgg.cpp  testEye.cpp  testWristband.cpp
